# bootlegger

./: .gitignore  Dockerfile  OPENAI_AUDIO_API.md  PLAN.md  README.md  pyproject.toml
bootlegger/: audio.py  config.py  formatting.py  main.py  transcribe.py
bootlegger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bootlegger_stt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
