[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bootlegger-stt"
authors = [
  { name = "Clay Rosenthal", email = "git@mail.clayrosenthal.me" },
]
version = "0.1.0"
description = "OpenAI-compatible FastAPI server for Moonshine Voice STT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "pydub>=0.25.1",
    "pydantic-settings>=2.0",
    "moonshine-voice>=0.0.49",
]

[project.scripts]
bootlegger = "bootlegger.main:cli"
