[project]
name = "bootlegger-stt"
authors = [
  { name = "Clay Rosenthal", email = "git@mail.clayrosenthal.me" },
]
maintainers = [
  { name = "Clay Rosenthal", email = "git@mail.clayrosenthal.me" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
version = "0.1.0"
description = "OpenAI-compatible FastAPI server for Moonshine Voice STT"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "pydub>=0.25.1",
    "pydantic-settings>=2.0",
    "moonshine-voice>=0.0.49",
]

[project.urls]
homepage = "https://github.com/clayrosenthal/bootlegger"

[build-system]
requires = ["uv_build>=0.8.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "bootlegger"

[project.scripts]
bootlegger = "bootlegger.main:cli"
